==> xiaoshubaoVIP/N32L40/code/lib_drv/n32l406x/src/n32l40x_gpio.c <==
#include "n32l40x_gpio.h"
#include "n32l40x_rcc.h"
#define AFIO_OFFSET (AFIO_BASE - PERIPH_BASE)
#define EVCR_OFFSET    (AFIO_OFFSET + 0x00)
#define EVOE_BitNumber ((uint8_t)0x07)
#define EVCR_EVOE_BB   (PERIPH_BB_BASE + (EVCR_OFFSET * 32) + (EVOE_BitNumber * 4))
#define GPIO_MODE                       ((uint32_t)0x00000003)
#define EXTI_MODE                       ((uint32_t)0x10000000)
#define GPIO_MODE_IT                    ((uint32_t)0x00010000)
#define GPIO_MODE_EVT                   ((uint32_t)0x00020000)
#define RISING_EDGE                     ((uint32_t)0x00100000)
#define FALLING_EDGE                    ((uint32_t)0x00200000)
#define GPIO_OUTPUT_TYPE                ((uint32_t)0x00000010)
#define GPIO_PULLUP_PULLDOWN            ((uint32_t)0x00000300)
#define GPIO_NUMBER                     ((uint32_t)16)

void GPIO_DeInit(GPIO_Module* GPIOx)
{

    uint32_t position = 0x00U;
    uint32_t iocurrent = 0x00U;
    uint32_t tmp = 0x00U;
    uint32_t GPIO_Pin = GPIO_PIN_ALL;
    /* Check the parameters */
    assert_param(IS_GPIO_ALL_PERIPH(GPIOx));
    /* Check the parameters */
    assert_param(IS_GPIO_PIN_AVAILABLE(GPIOx,GPIO_Pin));

    if (GPIOx == GPIOA)
    {
        RCC_EnableAPB2PeriphReset(RCC_APB2_PERIPH_GPIOA, ENABLE);
        RCC_EnableAPB2PeriphReset(RCC_APB2_PERIPH_GPIOA, DISABLE);
    }
    else if (GPIOx == GPIOB)
    {
        RCC_EnableAPB2PeriphReset(RCC_APB2_PERIPH_GPIOB, ENABLE);
        RCC_EnableAPB2PeriphReset(RCC_APB2_PERIPH_GPIOB, DISABLE);
    }
    else if (GPIOx == GPIOC)
    {
        RCC_EnableAPB2PeriphReset(RCC_APB2_PERIPH_GPIOC, ENABLE);
        RCC_EnableAPB2PeriphReset(RCC_APB2_PERIPH_GPIOC, DISABLE);
    }
    else if (GPIOx == GPIOD)
    {
        RCC_EnableAPB2PeriphReset(RCC_APB2_PERIPH_GPIOD, ENABLE);
        RCC_EnableAPB2PeriphReset(RCC_APB2_PERIPH_GPIOD, DISABLE);
    }
    else
    {
        return;
    }

    /* Configure the port pins */
    while ((GPIO_Pin >> position) != 0)
    {
        /* Get the IO position */
        iocurrent = (GPIO_Pin) & ((uint32_t)0x01 << position);

        if(iocurrent)
        {
            /*------------------------- EXTI Mode Configuration --------------------*/
            /* Clear the External Interrupt or Event for the current IO */
            tmp = AFIO->EXTI_CFG[position>>2];
            tmp &= (0x0FuL << (4u*(position & 0x03u)));
            if(tmp == (GPIO_GET_INDEX(GPIOx)<<(4u * (position & 0x03u))))
            {
                /* Clear EXTI line configuration */
                EXTI->IMASK &= ~(iocurrent);
                EXTI->EMASK &= ~(iocurrent);
                
                /* Clear Rising Falling edge configuration */
                EXTI->RT_CFG &= ~(iocurrent);
                EXTI->FT_CFG &= ~(iocurrent);
                tmp = 0x0FuL << (4u * (position & 0x03u));
                AFIO->EXTI_CFG[position >> 2u] &= ~tmp;
            }
            
            
            /*------------------------- GPIO Mode Configuration --------------------*/
            /* Configure IO Direction in Input Floting Mode */
            GPIOx->PMODE &= ~(GPIO_PMODE0_Msk << (position * 2U));

            /* Configure the default Alternate Function in current IO */
            if(position & 0x08)
                GPIOx->AFH |= ((uint32_t)0xF << ((uint32_t)(position & (uint32_t)0x07) * 4U));
            else
                GPIOx->AFL |= ((uint32_t)0xF << ((uint32_t)(position & (uint32_t)0x07) * 4U));
          
            /* Configure the default value IO Output Type */
            GPIOx->POTYPE  &= ~(GPIO_POTYPE_POT_0 << position) ;
          
            /* Deactivate the Pull-up oand Pull-down resistor for the current IO */
            GPIOx->PUPD &= ~(GPIO_PUPD0_Msk << (position * 2U));
      
        }
     position++;
    }
}

void GPIO_InitPeripheral(GPIO_Module* GPIOx, GPIO_InitType * GPIO_InitStruct)
{
    uint32_t pinpos = 0x00U;
    uint32_t tmp = 0x00U,tmpregister=0x00U;
    uint32_t position = 0x00U;
    uint32_t iocurrent = 0x00U;

    /* Check the parameters */
    assert_param(IS_GPIO_ALL_PERIPH(GPIOx));
    assert_param(IS_GPIO_MODE(GPIO_InitStruct->GPIO_Mode));
    assert_param(IS_GPIO_PIN(GPIO_InitStruct->Pin));
    assert_param(IS_GPIO_PULL(GPIO_InitStruct->GPIO_Pull));
    assert_param(IS_GPIO_SLEW_RATE(GPIO_InitStruct->GPIO_Slew_Rate));

    /*---------------------------- GPIO Mode Configuration -----------------------*/
    
    /*---------------------------- GPIO PL_CFG Configuration ------------------------*/

    while(((GPIO_InitStruct->Pin)>>position) != 0)
    {
        iocurrent = (GPIO_InitStruct->Pin)&(1U<<position);
        if(iocurrent)
        {
            pinpos = position * 2U;

            if((GPIO_InitStruct->GPIO_Mode == GPIO_Mode_AF_PP) || (GPIO_InitStruct->GPIO_Mode == GPIO_Mode_AF_OD) || (GPIO_InitStruct->GPIO_Mode == GPIO_Mode_Input) || (GPIO_InitStruct->GPIO_Mode == GPIO_Mode_Analog)) 
            {
                /* Check if the Alternate function is compliant with the GPIO in use */
                assert_param(IS_GPIO_AF(GPIO_InitStruct->GPIO_Alternate));
                /* Configure Alternate function mapped with the current IO */ 
                if(position & 0x08)
                {
                    tmp = GPIOx->AFH;
                    tmp &= ~((uint32_t)0xF << ((uint32_t)(position & (uint32_t)0x07) * 4U));
                    tmp |= ((uint32_t)(GPIO_InitStruct->GPIO_Alternate) << ((uint32_t)(position & (uint32_t)0x07) * 4U)) ;
                    GPIOx->AFH = tmp;
                }
                else
                {
                    tmp = GPIOx->AFL;
                    tmp &= ~((uint32_t)0xF << ((uint32_t)(position & (uint32_t)0x07) * 4U)) ;
                    tmp |= ((uint32_t)(GPIO_InitStruct->GPIO_Alternate) << ((uint32_t)(position & (uint32_t)0x07) * 4U)) ;
                    GPIOx->AFL = tmp;
                }
            }
            /* Configure IO Direction mode (Input, Output, Alternate or Analog) */
            tmpregister = GPIOx->PMODE;
            tmp = ((uint32_t)GPIO_InitStruct->GPIO_Mode) & ((uint32_t)0x0F);
            tmpregister &= ~(((uint32_t)0x03) << pinpos);
            tmpregister |=( tmp << pinpos);
            GPIOx->PMODE = tmpregister;

            /* Configure pull-down mode */
            tmpregister = GPIOx->PUPD;
            tmp = (GPIO_InitStruct->GPIO_Pull & (uint32_t)0x03);
            tmpregister &=~(((uint32_t)0x03) << pinpos);
            tmpregister |= (tmp <<pinpos);
            GPIOx->PUPD = tmpregister;
            
            
            /* Configure driver current*/
            if((GPIO_InitStruct->GPIO_Mode & GPIO_MODE) && (GPIO_InitStruct->GPIO_Mode != GPIO_Mode_Analog))
            {
                assert_param(IS_GPIO_CURRENT(GPIO_InitStruct->GPIO_Current));
                tmpregister = GPIOx->DS;
                tmp = (GPIO_InitStruct->GPIO_Current &((uint32_t)0x03));
                tmpregister &= ~(((uint32_t)0x03) << pinpos);
                tmpregister |= (tmp<<pinpos);
                GPIOx->DS = tmpregister;
            }
            /* Configure slew rate*/
                tmp = GPIOx->SR;
                tmp &=((uint32_t)(~((uint16_t)0x01 << position)));
                tmp |= (GPIO_InitStruct->GPIO_Slew_Rate &((uint32_t)0x01))<<position;
                GPIOx->SR = tmp;
            /*Configure Set/Reset register*/
            if (GPIO_InitStruct->GPIO_Pull == GPIO_Pull_Down)
            {
                GPIOx->PBC |= (((uint32_t)0x01) << position);
            }
            else
            {
                /* Set the corresponding POD bit */
                if (GPIO_InitStruct->GPIO_Pull == GPIO_Pull_Up)
                {
                    GPIOx->PBSC |= (((uint32_t)0x01) << position);
                }
            }
             
            /* In case of Output or Alternate function mode selection */
            if((GPIO_InitStruct->GPIO_Mode == GPIO_Mode_Out_PP) || (GPIO_InitStruct->GPIO_Mode == GPIO_Mode_AF_PP) ||
             (GPIO_InitStruct->GPIO_Mode == GPIO_Mode_Out_OD) || (GPIO_InitStruct->GPIO_Mode == GPIO_Mode_AF_OD))
            {
                /* Configure the IO Output Type */
                
                tmp= GPIOx->POTYPE;
                tmp &= ~(((uint32_t)0x01U) << position) ;
                tmp |= (((GPIO_InitStruct->GPIO_Mode & GPIO_OUTPUT_TYPE) >> 4U) << position);
                GPIOx->POTYPE = tmp;
            }
            /*--------------------- EXTI Mode Configuration ------------------------*/
            /* Configure the External Interrupt or event for the current IO */
            if(GPIO_InitStruct->GPIO_Mode & EXTI_MODE)
            {
                /* Clear EXTI line configuration */
                tmp = EXTI->IMASK;
                tmp &= ~((uint32_t)0x01<<position);
                if((GPIO_InitStruct->GPIO_Mode & GPIO_MODE_IT)== GPIO_MODE_IT)
                {
                    tmp |= ((uint32_t)0x01 << position);
                }
                EXTI->IMASK = tmp;
                
                tmp = EXTI->EMASK;
                tmp &= ~((uint32_t)0x01<<position);
                if((GPIO_InitStruct->GPIO_Mode & GPIO_MODE_EVT)== GPIO_MODE_EVT)
                {
                    tmp |= ((uint32_t)0x01 << position);
                }
                EXTI->EMASK = tmp;
                
                /* Clear Rising Falling edge configuration */
                
                tmp = EXTI->RT_CFG;
                tmp &= ~((uint32_t)0x01<<position);
                if((GPIO_InitStruct->GPIO_Mode & RISING_EDGE)== RISING_EDGE)
                {
                    tmp |= ((uint32_t)0x01 << position);
                }
                EXTI->RT_CFG = tmp;
                
                tmp = EXTI->FT_CFG;
                tmp &= ~((uint32_t)0x01<<position);
                if((GPIO_InitStruct->GPIO_Mode & FALLING_EDGE)== FALLING_EDGE)
                {
                    tmp |= ((uint32_t)0x01 << position);
                }
                EXTI->FT_CFG = tmp;
            }
        }
        position++;
    }
}

void GPIO_InitStruct(GPIO_InitType* GPIO_InitStruct)
{
    /* Reset GPIO init structure parameters values */
    GPIO_InitStruct->Pin        = GPIO_PIN_ALL;
    GPIO_InitStruct->GPIO_Slew_Rate = GPIO_Slew_Rate_Low;
    GPIO_InitStruct->GPIO_Mode  = GPIO_Mode_Input;
    GPIO_InitStruct->GPIO_Alternate = GPIO_NO_AF;
    GPIO_InitStruct->GPIO_Pull = GPIO_No_Pull;
    GPIO_InitStruct->GPIO_Current = GPIO_DC_2mA;
}

void GPIO_ConfigPinRemap(uint8_t PortSource, uint8_t PinSource, uint32_t AlternateFunction)
{
    uint32_t tmp = 0x00, tmpregister = 0x00;
    GPIO_Module *GPIOx;
    /* Check the parameters */
    assert_param(IS_GPIO_REMAP_PORT_SOURCE(PortSource));
    assert_param(IS_GPIO_PIN_SOURCE(PinSource));
    assert_param(IS_GPIO_AF(AlternateFunction));
    /*Get Peripheral point*/
    GPIOx = GPIO_GET_PERIPH(PortSource);
    /**/
    if(PinSource & (uint8_t)0x08)
    {
        tmp = (uint32_t)(PinSource & (uint8_t)0x07);
        /*Read GPIO_AFH register*/
        tmpregister  = GPIOx->AFH;
        /*Reset corresponding bits*/
        tmpregister &=~((uint32_t)0x0F <<(tmp*4U));
        /*Set corresponding bits*/
        tmpregister |= AlternateFunction << (tmp*4U);
        /*Write to the GPIO_AFH register*/
        GPIOx->AFH = tmpregister;
    }
    else
    {
        tmp = (uint32_t)(PinSource & (uint8_t)0x07);
        /*Read GPIO_AFL register*/
        tmpregister  = GPIOx->AFL;
        /*Reset corresponding bits*/
        tmpregister &=~((uint32_t)0x0F <<(tmp*4U));
        /*Set corresponding bits*/
        tmpregister |= AlternateFunction << (tmp*4U);
        /*Write to the GPIO_AFL register*/
        GPIOx->AFL = tmpregister;
    }
}

void GPIO_ConfigEventOutput(uint8_t PortSource, uint8_t PinSource)
{
    uint32_t tmpregister = 0x00,tmp = 0x00;
    GPIO_Module *GPIOx;
    /* Check the parameters */
    assert_param(IS_GPIO_EVENTOUT_PORT_SOURCE(PortSource));
    assert_param(IS_GPIO_PIN_SOURCE(PinSource));

    /*Get Peripheral structure point*/
    GPIOx = GPIO_GET_PERIPH(PortSource);
    if(PinSource & (uint8_t)0x08)
    {
        tmp = (uint32_t)(PinSource & (uint8_t)0x07);
        /*Read GPIO_AFH register*/
        tmpregister  = GPIOx->AFH;
        /*Reset corresponding bits*/
        tmpregister &=~((uint32_t)0x0F <<(tmp*4U));
        /*Set corresponding bits*/
        tmpregister |= GPIO_AF3_EVENTOUT;
        /*Write to the GPIO_AFH register*/
        GPIOx->AFH = tmpregister;
    }
    else
    {
        tmp = (uint32_t)(PinSource & (uint8_t)0x07);
        /*Read GPIO_AFL register*/
        tmpregister  = GPIOx->AFL;
        /*Reset corresponding bits*/
        tmpregister &=~((uint32_t)0x0F <<(tmp*4U));
        /*Set corresponding bits*/
        tmpregister |= GPIO_AF3_EVENTOUT;
        /*Write to the GPIO_AFL register*/
        GPIOx->AFL = tmpregister;
    }
}
